--- a/css/smile.css
+++ b/css/smile.css
@@ -24,11 +24,11 @@
     font-weight: 700;
 }
 
-.link:hover{
+.link:hover {
     color: #76c04e;
 }
 
-.link-dark .link{
+.link-dark .link {
     color: #272727;
 }
 
@@ -57,4 +57,257 @@
     .header .contact-info i {
         font-size: 20px;
     }
+}
+
+
+/*image carousel*/
+
+.text {
+    display: flex;
+    color: #fff;
+    font-size: 14px;
+    font-family: Poppins;
+}
+
+.text span {
+    display: block;
+    font-size: 100px;
+    font-weight: 200;
+    line-height: 1;
+    letter-spacing: 10px;
+    text-align: center;
+    text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    position: relative;
+    opacity: 0;
+    animation: animate 0.8s ease-in-out forwards;
+}
+
+.text span:nth-child(1) {
+    animation-delay: 0.3s;
+}
+
+.text span:nth-child(2) {
+    animation-delay: 0.4s;
+}
+
+.text span:nth-child(3) {
+    animation-delay: 0.5s;
+}
+
+.text span:nth-child(4) {
+    animation-delay: 0.6s;
+}
+
+.text span:nth-child(5) {
+    animation-delay: 0.7s;
+}
+
+.text span:nth-child(6) {
+    animation-delay: 0.8s;
+    font-weight: 700;
+}
+
+.text span:nth-child(7) {
+    animation-delay: 0.9s;
+    font-weight: 700;
+}
+
+.text span:nth-child(8) {
+    animation-delay: 1s;
+    font-weight: 700;
+}
+
+.text span:nth-child(9) {
+    animation-delay: 1.1s;
+    font-weight: 700;
+}
+
+.text span:nth-child(10) {
+    animation-delay: 1.2s;
+    font-weight: 700;
+}
+
+.text span:nth-child(11) {
+    animation-delay: 1.3s;
+    font-weight: 700;
+}
+
+.text span:nth-child(12) {
+    animation-delay: 1.4s;
+    font-weight: 700;
+}
+
+.text span:nth-child(13) {
+    animation-delay: 1.5s;
+    font-weight: 700;
+}
+
+.text span:nth-child(14) {
+    animation-delay: 1.6s;
+    font-weight: 700;
+}
+
+.text span:nth-child(15) {
+    animation-delay: 1.7s;
+    font-weight: 700;
+}
+
+@keyframes animate {
+    0% {
+        opacity: 0;
+        transform: scale(0.5);
+        right: 0px;
+    }
+
+    50% {
+        opacity: 0.5;
+        transform: scale(0.5);
+        right: 150px;
+    }
+
+    100% {
+        opacity: 1;
+        transform: scale(1);
+        right: 0px;
+    }
+}
+
+.slider {
+    position: relative;
+    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
+}
+
+.slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+}
+
+.slide.current {
+    opacity: 1;
+}
+
+.slide .content {
+    position: absolute;
+    /*bottom: 70px;*/
+    left: -600px;
+    opacity: 0;
+    width: 32%;
+    height: 100%;
+    background-color: #0e0e0e;
+    color: #fff;
+    padding: 35px;
+    display: grid;
+    align-items: center;
+}
+
+.slide .content h1 {
+    margin-bottom: 10px;
+}
+
+.slide.current .content {
+    opacity: 1;
+    transform: translateX(600px);
+    transition: all 0.7s ease-in-out 0.3s;
+}
+
+.buttons button#next {
+    position: absolute;
+    bottom: 2%;
+    left: 25%;
+}
+
+.buttons button#prev {
+    position: absolute;
+    bottom: 2%;
+    left: 20%;
+}
+
+.buttons .line {
+    width: 32px;
+    height: 1px;
+    background: #a7a4a4;
+    position: absolute;
+    bottom: 6%;
+    left: 22.8%;
+}
+
+.slider-wrapper {
+    position: relative;
+}
+
+.buttons button {
+    border: none;
+    background-color: transparent;
+    color: #fff;
+    cursor: pointer;
+    padding: 13px 15px;
+    outline: none;
+}
+
+.buttons button i {
+    font-size: 20px;
+}
+
+/*.buttons button:hover {
+  color: #333;
+}*/
+
+@media (max-width: 500px) {
+    .slide .content {
+        bottom: -300px;
+        left: 0;
+        width: 100%;
+        background: transparent;
+    }
+
+    .text span {
+        display: block;
+        font-size: 30px;
+    }
+
+    .slide.current .content {
+        transform: translateY(-300px);
+    }
+
+    .buttons button#next {
+        bottom: 2%;
+        left: 35%;
+    }
+
+    .buttons .line {
+        bottom: 6.5%;
+        left: 29.8%;
+    }
+}
+
+
+
+/* Backgorund Images */
+
+.slide:first-child {
+    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.95)), url('../img/demo_minimalistic_portfolio/1.jpg') no-repeat center top/cover;
+}
+
+.slide:nth-child(2) {
+    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.95)), url('../img/demo_minimalistic_portfolio/2.jpg') no-repeat center top/cover;
+}
+
+.slide:nth-child(3) {
+    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.95)), url('../img/demo_minimalistic_portfolio/3.jpeg') no-repeat center top/cover;
+}
+
+.slide:nth-child(4) {
+    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.95)), url('../img/demo_minimalistic_portfolio/4.jpg') no-repeat center top/cover;
+}
+
+.slide:nth-child(5) {
+    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.95)), url('../img/demo_minimalistic_portfolio/5.jpg') no-repeat center top/cover;
+
 }
